Replace getLast for compatibility with Java 17